--- a/MauiAppMinhasCompras/Views/ListaProduto.xaml
+++ b/MauiAppMinhasCompras/Views/ListaProduto.xaml
@@ -10,7 +10,7 @@
     </ContentPage.ToolbarItems>
     <VerticalStackLayout>
         <SearchBar x:Name="txt_search" Placeholder="Pesquisa de produtos" TextChanged="txt_search_TextChanged"/>
-        <ListView x:Name="lst_produtos">
+        <ListView x:Name="lst_produtos" ItemSelected="lst_produtos_ItemSelected">
             <ListView.Header>
                 <Grid ColumnDefinitions="*, *, *, * ,*">
                     <Label Grid.Column="0" Text="ID"/>
@@ -24,7 +24,7 @@
                 <DataTemplate>
                     <ViewCell>
                         <ViewCell.ContextActions>
-                            <MenuItem Text="Remover"/>
+                            <MenuItem Text="Remover" Clicked="MenuItem_Clicked" IsDestructive="True"/>
                         </ViewCell.ContextActions>
                         <Grid ColumnDefinitions="*, *, *, * ,*">
                             <Label Grid.Column="0" Text="{Binding Id}"/>
