--- a/MauiAppMinhasCompras/Views/ListaProduto.xaml
+++ b/MauiAppMinhasCompras/Views/ListaProduto.xaml
@@ -2,7 +2,8 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MauiAppMinhasCompras.Views.ListaProduto"
-             Title="Lista de Compras">
+             Title="Lista de Compras"
+             x:Name="ListaP">
 
     <ContentPage.ToolbarItems>
         <ToolbarItem Text='Somar' Clicked="ToolbarItem_Clicked_1"/>
@@ -17,24 +18,33 @@
         </ResourceDictionary>
     </ContentPage.Resources>
     <StackLayout>
-        <SearchBar x:Name="txt_search"
-                   Margin="-15,0 ,0 ,0"
-                   Placeholder="Pesquisa de produtos"
-                   TextChanged="txt_search_TextChanged"/>
-        
+        <Grid ColumnDefinitions="*, Auto" Margin="15,0,15,0">
+            <SearchBar x:Name="txt_search"
+               Grid.Column="0"
+               Placeholder="Pesquisa de produtos"
+               TextChanged="txt_search_TextChanged" />
+
+            <ImageButton Source="filter_icon.png" Grid.Column="1"
+                 WidthRequest="40"
+                 HeightRequest="40"
+                 VerticalOptions="Center"
+                 Clicked="Filtro_Clicked" />
+        </Grid>
         <Frame Padding="0" Margin="10" VerticalOptions="FillAndExpand">
             <ListView x:Name="lst_produtos"
                       IsPullToRefreshEnabled="True"
                       Refreshing="lst_produtos_Refreshing"
                       ItemSelected="lst_produtos_ItemSelected">
                 <ListView.Header>
-                    <Grid ColumnDefinitions="30, 100, 80, 50, 90"
+                    <Grid ColumnDefinitions="30, 100, auto, 80, 50, auto, 90" ColumnSpacing="10"
                           BackgroundColor="{StaticResource Gray100}">
                         <Label Grid.Column="0" Text="ID" Padding="5" FontAttributes="Bold"/>
                         <Label Grid.Column="1" Text="Descrição" FontAttributes="Bold"/>
-                        <Label Grid.Column="2" Text="Preço" FontAttributes="Bold"/>
-                        <Label Grid.Column="3" Text="qtd" FontAttributes="Bold"/>
-                        <Label Grid.Column="4" Text="Total" FontAttributes="Bold"/>
+                        <Label Grid.Column="2" Text="Categoria" FontAttributes="Bold" IsVisible="{Binding Source={x:Reference ListaP}, Path=IsFilteredByCategory}"/>
+                        <Label Grid.Column="3" Text="Preço" FontAttributes="Bold"/>
+                        <Label Grid.Column="4" Text="qtd" FontAttributes="Bold"/>
+                        <Label Grid.Column="5" Text="Data" FontAttributes="Bold" IsVisible="{Binding Source={x:Reference ListaP}, Path=IsFilteredByDate}"/>
+                        <Label Grid.Column="6" Text="Total" FontAttributes="Bold"/>
                     </Grid>
                 </ListView.Header>
                 <ListView.ItemTemplate>
@@ -43,17 +53,18 @@
                             <ViewCell.ContextActions>
                                 <MenuItem Text="Remover" Clicked="MenuItem_Clicked" IsDestructive="True"/>
                             </ViewCell.ContextActions>
-                            <Grid ColumnDefinitions="30, 100, 80, 50, 90">
+                            <Grid ColumnDefinitions="30, 100, auto, 80, 50, auto, 90" ColumnSpacing="10">
                                 <Label Grid.Column="0" Text="{Binding Id}" Padding="5"/>
                                 <Label Grid.Column="1" Text="{Binding Descricao}"/>
-                                <Label Grid.Column="2" Text="{Binding Preco, StringFormat='{}{0:c}'}"/>
-                                <Label Grid.Column="3" Text="{Binding Quantidade}"/>
-                                <Label Grid.Column="4" Text="{Binding Total, StringFormat='{}{0:c}'}"/>
+                                <Label Grid.Column="2" Text="{Binding Categoria}" IsVisible="{Binding Source={x:Reference ListaP}, Path=IsFilteredByCategory}"/>
+                                <Label Grid.Column="3" Text="{Binding Preco, StringFormat='{}{0:c}'}"/>
+                                <Label Grid.Column="4" Text="{Binding Quantidade}"/>
+                                <Label Grid.Column="5" Text="{Binding DataCadastro, StringFormat='{0:dd/MM/yyyy}'}" IsVisible="{Binding Source={x:Reference ListaP}, Path=IsFilteredByDate}"/>
+                                <Label Grid.Column="6" Text="{Binding Total, StringFormat='{}{0:c}'}"/>
                             </Grid>
                         </ViewCell>
                     </DataTemplate>
                 </ListView.ItemTemplate>
-
             </ListView>
         </Frame>
     </StackLayout>
