--- a/MauiAppMinhasCompras/Views/NovoProduto.xaml
+++ b/MauiAppMinhasCompras/Views/NovoProduto.xaml
@@ -11,6 +11,12 @@
         <Label Text="Descrição do Produto:"/>
         <Entry x:Name="txt_descricao"/>
 
+        <Label Text="Categoria:"/>
+        <Entry x:Name="txt_categoria"/>
+
+        <Label Text="Data da Compra:"/>
+        <DatePicker x:Name="dtp_dt_compra"/>
+
         <Label Text="Quantidade:"/>
         <Entry x:Name="txt_quantidade" Keyboard="Numeric"/>
 
